XMLExper/m12/m12_52_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘char* tinyxml2::XMLDocument::Identify(char*, tinyxml2::XMLNode**, bool)’:
tinyxml2.cpp:750:115: error: lvalue required as left operand of assignment
  750 |         /*PCI*/dynamic_cast<tinyxml2::XMLDeclaration*>(returnNode) = CreateUnlinkedNode<XMLComment>( _commentPool );
      |                                                                                                                   ^
diff: tinyxml2.o: No such file or directory
